--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /Semana2/build/
 /semanaEjercicios2/nbproject/private/
 /semanaEjercicios2/build/
+/semanaEjercicios3/nbproject/private/
+/semanaEjercicios3/build/
+/ejerciciosSemana8/nbproject/private/
+/ejerciciosSemana8/build/
+/semanaEjercicio9/nbproject/private/
+/semanaEjercicio9/build/
